# fact-deliverable

./: .gitattributes  README.md
baseline-models/: Makefile  README.md  data_format.txt  pyproject.toml  requirements-lock.txt
baseline-models/src/baseline_models/model_code/: constants.py  knn_fast.py  logistic_regression.py  predict.py
baseline-models/src/baseline_models/model_code/deprecated/: nummerical_knn.py
baseline-models/src/baseline_models/utils/: utils.py
baseline-models/src/baseline_models/visualisation_code/: dict_to_state.py  examples.py
baseline-models/src/baseline_models/visualisation_code/deprecated/: test.py
baseline-models/src/baseline_models/web_code/: click_territory.js
chiron-utils/: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements-lock.txt
chiron-utils/baseline-models/: requirements.txt
chiron-utils/baseline-models/src/baseline_models/model_code/: data_split.py
chiron-utils/baseline-models/src/baseline_models/model_code/deprecated/: data_read.py
chiron-utils/baseline-models/src/baseline_models/visualisation_code/: custom_renderer.py
chiron-utils/src/chiron_utils/: parsing_utils.py
chiron-utils/src/chiron_utils/bots/: lr_bot.py
chiron-utils/src/chiron_utils/scripts/: create_game.py  generate_sbatch.py  run_game.py  run_games.py
chiron-utils/tests/: randomize_order_test.py
chiron-utils/tests/bot_tests/: bot_test.py  gameplay_framework.py
diplomacy_cicero/: Dockerfile  README.md  requirements-lock.txt  requirements.txt
diplomacy_cicero/chiron-utils/: CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml  requirements-lock.txt
diplomacy_cicero/chiron-utils/.github/workflows/: checks.yaml
diplomacy_cicero/chiron-utils/baseline-models/: .gitignore  requirements.txt
diplomacy_cicero/chiron-utils/baseline-models/src/baseline_models/model_code/: evaluation.py  preprocess.py
diplomacy_cicero/chiron-utils/baseline-models/src/baseline_models/model_code/deprecated/: batch_lr.py
diplomacy_cicero/chiron-utils/baseline-models/src/baseline_models/visualisation_code/: render_examples.py  utils.py
diplomacy_cicero/chiron-utils/baseline-models/src/baseline_models/web_code/: main.html
diplomacy_cicero/chiron-utils/lr_model/: ANK_WA  A_ALB_FM  A_ALB_FR  A_ALB_SM  A_ALB_SR  A_ALB_WA  A_ANK_FM  A_ANK_FR  A_ANK_SM  A_ANK_SR  A_ANK_WA  A_APU_FM  A_APU_FR  A_APU_SM  A_APU_SR  A_APU_WA  A_ARM_FM  A_ARM_FR  A_ARM_SM  A_ARM_SR  A_ARM_WA  A_BEL_FM  A_BEL_FR  A_BEL_SM  A_BEL_SR  A_BEL_WA  A_BER_FM  A_BER_FR  A_BER_SM  A_BER_SR  A_BER_WA  A_BOH_FM  A_BOH_FR  A_BOH_SM  A_BOH_SR  A_BOH_WA  A_BRE_FM  A_BRE_FR  A_BRE_SM  A_BRE_SR  (+580 more)
diplomacy_cicero/chiron-utils/src/chiron_utils/: __init__.py  daide2eng.py  game_utils.py  randomize_order.py  utils.py
diplomacy_cicero/chiron-utils/src/chiron_utils/bots/: __init__.py  baseline_bot.py  random_proposer_bot.py
diplomacy_cicero/chiron-utils/src/chiron_utils/scripts/: __init__.py  download_game.py  run_bot.py
diplomacy_cicero/chiron-utils/tests/: utils_test.py
diplomacy_cicero/fairdiplomacy_external/: cicero_intent_test.py  mila_api_advisor.py  mila_api_player.py
metrics/: README.md  figures.py
